--- a/dos33.html
+++ b/dos33.html
@@ -4189,8 +4189,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 33B7:CB D3 C9 C4                                                                    ; <i>a <b>single</b> tree, and completely miss the forest!</i>
                     018             MSB OFF                                         ; Switch back to 7-bit ASCII
                     019 <a class="d" name="VML"   >VML         </a>EQU *-<a class="v" href="#VOLMES">VOLMES</a>-1                                  ; File <a class="file" href="#FDELCAT">FDELCAT</a>, Func <a class="x" href="#RDIR">RDIR</a>, Line <span class="todo">TODO</span>
-                    020             PAGE
-                    021 ;VTOC RECORD AREA                                           ; === VTOC === Let the clusterfuck of bad design commence in <a href="https://www.nasa.gov/audience/foreducators/topnav/materials/listbytype/3_2_1_Puff.html">3..2..1..</a>
+                    020             PAGE                                            ; Let the clusterfuck of bad design commence in <a href="https://www.nasa.gov/audience/foreducators/topnav/materials/listbytype/3_2_1_Puff.html">3..2..1..</a>
+                    021 ;VTOC RECORD AREA                                           ; === VTOC ===
                     022 <a class="d" name="VTOC"  >VTOC        </a>EQU *                                           ; <b class="ts">T11S0</b> [offset], Right = normal snarky commentary
 33BB:04             023 <a class="d" name="VDOST" >VDOST       </a>DFB 4           ; DOS TYPE                      ; [00] *sigh* magic number: /sarcasm If only FILESYSTEM_TYPE_VTOC = $4
 33BC:11             024 <a class="d" name="VDIRTK">VDIRTK      </a>DFB 17          ; COLUME DIRECTORY SECTOR       ; [01] *spelling* VOLUME, *sigh* <i>TRACK</i> not sector
@@ -4199,13 +4199,15 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 33BF:00             027             DFB 0           ; SPARE                         ; [04] *<a class="dumb" name="fvcbufs_33BF">wastes</a>* 1 byte *sarcasm* "Because <i>someday</i> these
 33C0:00             028             DFB 0           ; SPARE                         ; [05] *<a class="dumb" name="fvcbufs_33C0">wastes</a>* 1 byte            <i>might</i> be used ..."
 33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; [06]
-33C2:0 0 0 0 0 0    030             DS 32           ; SPARE                         ; [07] Gee, here's an idea, instead of wasting space in the VTOC:
-33C8:0 0 0 0 0 0 0 0                                                                ;       1) Pack our data by removing all unused crap,
-33D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ;       2) Put VTOC data as first XX bytes in the CATALOG <b class="ts">T11$F</b>
+33C2:00 00 00 00    030             DS 32           ; SPARE                         ; [07] *<a class="dumb" name="fvcufs_33C2">wastes</a>* 32 bytes -- WTF !
+33C6:00 00 00 00                                                                    ;      Gee, here's an idea,
+33CA:00 00 00 00                                                                    ;      instead of wasting space in the VTOC:
+33CE:00 00 00 00                                                                    ;       1) Pack our data by removing all unused crap,
+33D2:0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                    ;       2) Put VTOC data as first XX bytes in the CATALOG <b class="ts">T11$F</b>
 33E0:00 00                                                                          ;       If we were <i>really</i> smart <b class="ts">T11</b> would reside on <b class="ts">T2$5..F</b>
 33E2:7A             031 <a class="d" name="VTDMS" >VTDMS       </a>DFB 122         ; MAX SECTORS IN A FILE DIR     ; [27] *sigh* not 128 so we can BMI (Branch on Minus) ???
-33E3:00 00 00 00    032 <a class="d" name="VSPARE">VSPARE      </a>DS 8            ; SPARES                        ; [28] *sarcasm* Who cares, we have 140KB, right!
-33E7:00 00 00 00    033 ;
+33E3:00 00 00 00    032 <a class="d" name="VSPARE">VSPARE      </a>DS 8            ; SPARES                        ; [28]  Oh FFS already ...
+33E7:00 00 00 00    033 ;                                                          ;      /sarcasm* Who cares, we have 140KB, right!
 33EB:11             034 <a class="d" name="VALCA1">VALCA1      </a>DFB 17          ; ALOCATION ALGORITHM BYTE 1    ; [30] Last allocated track <span class="todo">TODO</span> Cross-Ref
 33EC:01             035 <a class="d" name="VALCA2">VALCA2      </a>DFB 1           ; AA BYTE2                      ; [31] Direction of last tack allocation --  <span class="todo">TODO</span> Cross-Ref
                                                                                     ;           +$01 inwards  to <span class="ts">T22</span>,
@@ -4216,10 +4218,21 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 33F0:10             039 <a class="d" name="VNOSEC">VNOSEC      </a>DFB 16          ; NO SECTORS PER TRACK          ; [35]          Evidence that one day DOS 3.4+ might support:
 33F1:00 01          040 <a class="d" name="VSECLN">VSECLN      </a>DW 256          ; NO. BYTES PER SECTOR          ; [36] (Little)     &gt;  16 sectors/track
                     041 ;                                                           ; [37] (Endian) and &gt; 256 bytes/sector.
-                    042 <a class="d" name="VSECAL">VSECAL      </a>EQU *                                           ;       *note* <b>Actual</b> VTOC header is $F3-$BB = $38 bytes
-                    043 ;SECTORS ALLOCATED BY BIT MAP                               ;       [0] Sectors: FEDCBA98    0=Used
-                    044 ;4 BYTES OF BITS PER TRACK                                  ;       [1] Sectors: 76543210    1=Free
-                    045 ;LEFT MOST BIT REPRESENTS SECTOR N                          ;*sigh* Let us <b>waste</b>     : 35*4 bytes = 140 bytes ($8C)
+                    042 <a class="d" name="VSECAL">VSECAL      </a>EQU *                                           ;      *note* <b>Actual</b> VTOC header is $F3-$BB = $38 bytes
+                                                                                    ;       But we only really <b>use</b>:
+                                                                                    ;         VVOLNO  (And even this is of dubious value
+                                                                                    ;                  since ProDOS users don't miss it.)
+                                                                                    ;         VALCA1
+                                                                                    ;         VALCA2
+                                                                                    ;       a total of <b>3 bytes</b> out of $38!
+                                                                                    ;       That is ~5% usage!!
+                    043 ;SECTORS ALLOCATED BY BIT MAP                               ;struct TrackBitmap {   //    Bits = MSB .. LSB
+                                                                                    ;    uint8_t hi  ;      //[0] Sectors: FEDCBA98    0=Used
+                    044 ;4 BYTES OF BITS PER TRACK                                  ;    uint8_t lo  ;      //[1] Sectors: 76543210    1=Free
+                                                                                    ;    uint8_t pad1;      //[2] *wasted* 1 byte
+                                                                                    ;    uint8_t pad2;      //[3] *wasted* 1 byte
+                                                                                    ; } FreeSectors[ $22 ]; // Technically room for T$31
+                    045 ;LEFT MOST BIT REPRESENTS SECTOR N                          ;*sigh* Bytes <b>stored</b>     : 35*4 bytes = 140 bytes ($8C)
                     046 ;WHERE N=NO SECTORS PER TRACK                               ;       When we only <b>need</b>: 35*2 bytes =  70 bytes ($46)
                     047 ;                                                           ;As Mike Acton says: "<i>Solve the <b>actual</b> problem,</i>
                     048 ;                                                           ;                     <i>NOT the one you <b>think</b> you have.</i>"
@@ -4274,7 +4287,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     065 ;  FILE USE CODE                                            ;     uint8_t  type
                     066 ;  FILE NAME         (30)                                   ;     char     name[30]
                     067 ;  FILE SECTOR COUNT (2)                                    ;     uint16_t num_sectors
-34BC:00 00 00 00    068             ORG VOLDIR+256                                  ; *<a class="dumb" name="fvcbufs_34BC">wastes</a>* 256 bytes *<a class="dumb" href="https://c1.staticflickr.com/3/2536/3904932487_54cce78f13.jpg">double facepalm</a>* &#x0CA0;_&#x0CA0; Oh FFS already ...
+34BC:00 00 00 00    068             ORG VOLDIR+256                                  ; *<a class="dumb" name="fvcbufs_34BC">wastes</a>* 256 bytes *<a class="dumb" href="https://c1.staticflickr.com/3/2536/3904932487_54cce78f13.jpg">double facepalm</a>* &#x0CA0;_&#x0CA0;
 34C0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
 34D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
 34E0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
