--- a/dos33.html
+++ b/dos33.html
@@ -4297,7 +4297,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 34D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
 34E0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
 34F0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
-3500:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; === <b class="ts">T?S?</b> ===
+3500:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; === <b class="ts">T2S4</b> ===
 3510:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; /sarcasm* Who cares, we have 140KB, right!
 3520:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
 3530:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
