Clarified dec tracks 41+)

--- a/dos33.html
+++ b/dos33.html
@@ -4277,14 +4277,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3473:FF FF FF FF                                                                    ; [B8]=T20
 3477:FF FF FF FF                                                                    ; [BC]=T21
 347B:FF FF FF FF                                                                    ; [C0]=T22
-347F:FF FF FF FF                                                                    ; [C4]=T23 Extra track 35
-3483:FF FF FF FF                                                                    ; [C8]=T24 Extra track 36
-3487:FF FF FF FF                                                                    ; [CC]=T25 Extra track 37
-348B:FF FF FF FF                                                                    ; [D0]=T26 Extra track 38
-348F:FF FF FF FF                                                                    ; [D4]=T27 Extra track 39
-3493:FF FF FF FF                                                                    ; [D8]=T28 Extra track 40
+347F:FF FF FF FF                                                                    ; [C4]=T23 (Extra track 35)
+3483:FF FF FF FF                                                                    ; [C8]=T24 (Extra track 36)
+3487:FF FF FF FF                                                                    ; [CC]=T25 (Extra track 37)
+348B:FF FF FF FF                                                                    ; [D0]=T26 (Extra track 38)
+348F:FF FF FF FF                                                                    ; [D4]=T27 (Extra track 39)
+3493:FF FF FF FF                                                                    ; [D8]=T28 (Extra track 40)
 3497:FF FF FF FF                                                                    ; [DC]=T29 *wastes* 36 bytes [$DC..$FF] = $24
-349B:FF FF FF FF                                                                    ; [E0]=T2A
+349B:FF FF FF FF                                                                    ; [E0]=T2A          (Tracks 41+ are not accessible on any drive.)
 349F:FF FF FF FF                                                                    ; [E4]=T2B
 34A3:FF FF FF FF                                                                    ; [E8]=T2C
 34A7:FF FF FF FF                                                                    ; [EC]=T2D  <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a>
