Link ORIGIN func

--- a/dos33.html
+++ b/dos33.html
@@ -257,7 +257,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     001             SBTL "DOS3.3C w/APPEND fix, U/L case"
                     002             LST  ON,VSYM
                     003             MSB  OFF
-                    004 ORIGIN      EQU  $1B00
+                    004 <a class="f" name="ORIGIN">ORIGIN      </a>EQU  $1B00
                     005 <a class="macro" name="DIAGMOD">DIAGMOD     </a>EQU  0
                     006 <a class="macro" name="DOS33B" >DOS33B      </a>EQU  1
                     007 <a class="macro" name="ULC"    >ULC         </a>EQU  0
